# multimedia_image_standard

./: README_zh.md  bundle.json  ohos.build
frameworks/innerkitsimpl/codec/src/: image_packer.cpp  image_packer_ex.cpp  image_source.cpp
frameworks/innerkitsimpl/common/include/: image_packer_ex.h  pixel_map_utils.h
frameworks/innerkitsimpl/common/src/: incremental_pixel_map.cpp  pixel_map.cpp  pixel_map_parcel.cpp
frameworks/innerkitsimpl/converter/include/: basic_transformer.h  matrix.h  pixel_convert.h  pixel_map_rosen_utils.h  post_proc.h  scan_line_filter.h
frameworks/innerkitsimpl/converter/src/: basic_transformer.cpp  matrix.cpp  pixel_convert.cpp  pixel_map_rosen_utils.cpp  post_proc.cpp
frameworks/innerkitsimpl/creator/include/: image_creator.h  image_creator_context.h  image_creator_manager.h
frameworks/innerkitsimpl/creator/src/: image_creator.cpp  image_creator_manager.cpp
frameworks/innerkitsimpl/pixelconverter/: BUILD.gn
frameworks/innerkitsimpl/pixelconverter/include/: pixel_convert_adapter.h  pixel_map_jni_utils.h
frameworks/innerkitsimpl/pixelconverter/src/: pixel_convert_adapter.cpp
frameworks/innerkitsimpl/receiver/include/: image_receiver.h  image_receiver_context.h  image_receiver_manager.h
frameworks/innerkitsimpl/receiver/src/: image_receiver.cpp  image_receiver_manager.cpp
frameworks/innerkitsimpl/stream/include/: buffer_packer_stream.h  buffer_source_stream.h  file_packer_stream.h  file_source_stream.h  incremental_source_stream.h  istream_source_stream.h  ostream_packer_stream.h  (+2 more)
frameworks/innerkitsimpl/test/: BUILD.gn
frameworks/innerkitsimpl/test/unittest/: color_converter_test.cpp  image_color_space_test.cpp  image_creator_napi_test.cpp  image_pixel_map_parcel_test.cpp  image_pixel_map_test.cpp  image_plugins_libjpegplugin_test.cpp  image_source_bmp_test.cpp  image_source_gif_test.cpp  image_source_jpeg_test.cpp  image_source_png_test.cpp  image_source_raw_test.cpp  image_source_util.cpp  image_source_util.h  image_source_wbmp_test.cpp  image_source_webp_test.cpp  image_transform_test.cpp
frameworks/innerkitsimpl/utils/: BUILD.gn
frameworks/innerkitsimpl/utils/include/: image_format.h  image_log.h  image_trace.h  image_utils.h
frameworks/innerkitsimpl/utils/src/: image_trace.cpp  image_utils.cpp
frameworks/kits/js/common/pixelmap_ndk/: BUILD.gn  image_pixel_map_napi.cpp
ide/: BUILD.gn
interfaces/innerkits/: BUILD.gn
interfaces/innerkits/include/: decode_listener.h  image_packer.h  image_source.h  image_type.h  log_tags.h  media_errors.h  peer_listener.h  pixel_map.h  pixel_map_manager.h  pixel_map_parcel.h
interfaces/kits/js/: @ohos.multimedia.image.d.ts
interfaces/kits/native/: BUILD.gn  libpixelmap.ndk.json
mock/native/: BUILD.gn
mock/native/include/: directory_ex.h  errors.h  message_parcel.h  nocopyable.h  parcel.h  rwlock.h  singleton.h
mock/native/include/hilog/: log.h  log_c.h  log_cpp.h
mock/native/include/secure/: securec.h
mock/native/src/: HiLog.cpp  directory_ex.cpp  message_parcel.cpp  refbase.cpp  rwlock.cpp
plugins/common/libs/: BUILD.gn
plugins/common/libs/image/formatagentplugin/: BUILD.gn
plugins/common/libs/image/formatagentplugin/include/: bmp_format_agent.h  gif_format_agent.h  heif_format_agent.h  jpeg_format_agent.h  png_format_agent.h  raw_format_agent.h  wbmp_format_agent.h  webp_format_agent.h
plugins/common/libs/image/formatagentplugin/src/: bmp_format_agent.cpp  gif_format_agent.cpp  heif_format_agent.cpp  jpeg_format_agent.cpp  plugin_export.cpp  png_format_agent.cpp  raw_format_agent.cpp  wbmp_format_agent.cpp  webp_format_agent.cpp
plugins/common/libs/image/libbmpplugin/: BUILD.gn
plugins/common/libs/image/libbmpplugin/src/: bmp_decoder.cpp  plugin_export.cpp
plugins/common/libs/image/libgifplugin/: BUILD.gn
plugins/common/libs/image/libgifplugin/include/: gif_decoder.h
plugins/common/libs/image/libgifplugin/src/: gif_decoder.cpp  plugin_export.cpp
plugins/common/libs/image/libheifplugin/include/: heif_decoder_interface.h  heif_decoder_wrapper.h
plugins/common/libs/image/libheifplugin/src/: heif_decoder.cpp  heif_decoder_wrapper.cpp
plugins/common/libs/image/libjpegplugin/: BUILD.gn
plugins/common/libs/image/libjpegplugin/include/: exif_info.h  icc_profile_info.h  jpeg_decoder.h  jpeg_encoder.h  jpeg_utils.h
plugins/common/libs/image/libjpegplugin/src/: exif_info.cpp  icc_profile_info.cpp  jpeg_decoder.cpp  jpeg_encoder.cpp  jpeg_utils.cpp
plugins/common/libs/image/libpngplugin/: BUILD.gn
plugins/common/libs/image/libpngplugin/src/: png_decoder.cpp  png_ninepatch_res.cpp
plugins/common/libs/image/librawplugin/: BUILD.gn
plugins/common/libs/image/librawplugin/include/: raw_decoder.h  raw_stream.h
plugins/common/libs/image/librawplugin/src/: plugin_export.cpp  raw_decoder.cpp  raw_stream.cpp
plugins/common/libs/image/libwebpplugin/: BUILD.gn
plugins/common/libs/image/libwebpplugin/include/: webp_encoder.h
plugins/common/libs/image/libwebpplugin/src/: plugin_export.cpp  webp_decoder.cpp  webp_encoder.cpp
plugins/manager/: BUILD.gn
plugins/manager/include/: plugin_server.h
plugins/manager/include/image/: abs_image_decoder.h  abs_image_encoder.h  image_plugin_type.h  output_data_stream.h
plugins/manager/include/utils/: pointer_key_map.h
plugins/manager/src/: plugin_server.cpp
plugins/manager/src/common/: attr_data.cpp  platform_adp.cpp  platform_adp.h
plugins/manager/src/framework/: impl_class.cpp  impl_class_key.cpp  impl_class_key.h  impl_class_mgr.cpp  json_helper.cpp  json_helper.h  plugin_info_lock.h
plugins/manager/src/pluginbase/: abs_impl_class_key.h  plugin_class_base.cpp
plugins/manager/src/thirdpartyadp/gstreamer/: gst_plugin_fw.cpp  gst_plugin_fw.h
plugins/manager/test/unittest/common/: BUILD.gn  plugin_manager_test.cpp
plugins/manager/test/unittest/common/plugin_example/plugin_example1/: BUILD.gn
plugins/manager/test/unittest/common/plugin_example/plugin_example2/: BUILD.gn
plugins/manager/test/unittest/common/plugin_example/plugin_example3/: BUILD.gn
test/resource/image/: ohos_test.xml
(+68 files in other folders)
